# mechine_lensing

./: .gitignore  CODE_REVIEW_BOTTLENECKS_AND_OPTIMIZATIONS.md  CONTRIBUTING.md  DEEPLENSTRONOMY_GUIDE.md  LICENSE  MULTI_SCALE_TRAINER_FIXES.md  Makefile  README.md  README_SCIENTIFIC.md  REFACTORING_SUMMARY.md  RELEASE_SUMMARY.md  REPORT.md  REPORT_RELEASE.md  cloud_train.py  codebase_dump.txt  env.example  path.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  test_deeplenstronomy.py  test_refactored_structure.py  test_refactored_trainers.py
.github/workflows/: ci.yml
configs/: baseline.yaml  color_aware_lens.yaml  comprehensive.yaml  deeplenstronomy_config.yaml  enhanced_ensemble.yaml  lightning_cloud.yaml  lightning_ensemble.yaml  lightning_train.yaml  physics_informed_ensemble.yaml  quick.yaml  realistic.yaml  trans_enc_s.yaml  unified.yaml  validation.yaml
docs/: ADVANCED_PHYSICS_VALIDATION.md  CLUSTER_LENSING_SECTION.md  CLUSTER_TO_CLUSTER_LENSING_SECTION.md  CONTRACTS.md  CRITICAL_FIXES_TECHNICAL_REVIEW.md  DATALOADER_AND_MEMORY_IMPROVEMENTS.md  DATASETS.md  DEPLOYMENT_GUIDE.md  FINAL_UPDATE_SUMMARY.md  FOR_ASTRONOMERS.md  FOR_ML_DEVELOPERS.md  GLOSSARY.md  INTEGRATION_IMPLEMENTATION_PLAN.md  LIGHTNING_INTEGRATION_GUIDE.md  P1_HARDENING.md  P1_PERFORMANCE_SUMMARY.md  PARALLEL_INFERENCE_IMPROVEMENTS.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHYSICS.md  PHYSICS_INFORMED_ENSEMBLE_GUIDE.md  PRIORITY_0_FIXES_GUIDE.md  QUICKSTART_ASTRONOMERS.md  QUICKSTART_ML_DEVELOPERS.md  README.md  REPO_MAP.md  SCIENTIFIC_METHODOLOGY.md  SSL.md  TECHNICAL_DETAILS.md  TECHNICAL_REPORT.md  TILED_INFERENCE.md  TROUBLESHOOTING.md  VALIDATION_FIXES_SUMMARY.md  WORKSPACE_ORGANIZATION.md  cluster2clsuter_roadmap.txt
examples/: cluster_tiled_inference.yml  cnn_classification.yml  lens_gnn_regression.yml
mlensing/gnn/: datamodules.py  graph_builder.py  inference.py  inference_utils.py  lens_gnn.py  lightning_module.py  losses.py  physics_ops.py  units.py
patches/: ensemble.diff  gnn_lightning.diff  inference.diff  tests.diff
scripts/: DATASET_IMPORT_FIX_SUMMARY.md  IMPORT_ORGANIZATION_SUMMARY.md  README.md  __init__.py  _common.py  bench_dataloaders.py  benchmark_p2_attention.py  ci_gates.py  cli.py  comprehensive_physics_validation.py  convert_real_datasets.py  demo_p1_performance.py  eval.py  eval_ensemble.py  generate_dataset.py  grep_regressions.py  performance_test.py  prepare_lightning_dataset.py  quick_demo_calibration.py  smoke_models.py  test_components.py  train.py  train_enhanced_ensemble.py  train_with_calibration.py  visualize_results.py
scripts/common/: __init__.py  argparse_utils.py  data_utils.py  device_utils.py  logging_utils.py
scripts/demos/: __init__.py  demo_calibrated_ensemble.py  demo_p1_performance.py  demo_physics_ensemble.py
scripts/evaluation/: __init__.py  eval.py  eval_physics_ensemble.py
scripts/utilities/: __init__.py  generate_dataset.py
src/: dataset.py  eval.py  eval_ensemble.py  lit_datamodule.py  lit_system.py  lit_train.py  metadata_schema_v2.py  train.py  visualize.py
src/analysis/: __init__.py  aleatoric.py
src/calibration/: __init__.py  temperature.py
src/datasets/: __init__.py  cluster_lensing.py  lens_dataset.py  lens_fits_dataset.py  optimized_dataloader.py  transforms.py
src/evaluation/: __init__.py  ensemble_evaluator.py  evaluator.py
src/metrics/: __init__.py  bologna_metrics.py  calibration.py  classification.py
src/models/: __init__.py  color_aware_lens.py  factory.py  lens_classifier.py  unified_factory.py
src/models/attention/: lensing_attention.py  physics_regularized_attention.py
src/models/backbones/: __init__.py  enhanced_light_transformer.py  light_transformer.py  vit.py  (+1 more)
src/physics/: color_consistency.py
src/training/: __init__.py  accelerated_trainer.py  accelerated_trainer_refactored.py  ensemble_inference.py  multi_scale_trainer.py  multi_scale_trainer_refactored.py  trainer.py
src/utils/: __init__.py  benchmark.py  config.py  device_utils.py  logging_utils.py  numerical.py  path_utils.py  seed_utils.py  unified_config.py
src/validation/: __init__.py  enhanced_reporting.py  lensing_metrics.py  physics_validator.py  realistic_lens_models.py  source_reconstruction.py  uncertainty_metrics.py  visualization.py
tests/: test_aleatoric.py  test_benchmark_gputil_fallback.py  test_cli_smoke.py  test_dataset_generator.py  test_datasets.py  test_enhanced_ensemble.py  test_ensemble_models.py  test_light_transformer.py  test_models_api.py  test_p0_critical_fixes.py  test_performance_monitor.py  test_unified_factory.py
(+25 files in other folders)
